[package]
name = "libp2prs-gossipsub"
version = "0.3.0"
license = "MIT"
description = "Gossipsub protocol for libp2p"
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "pubsub"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[features]
async-std = ["libp2prs-swarm/async-std", "libp2prs-runtime/async-std"]
tokio = ["libp2prs-swarm/tokio", "libp2prs-runtime/tokio"]

[dependencies]
async-trait = "~0.1"
futures = { version = "~0.3", features = ["std"], default-features = false }
libp2prs-runtime = { path = "../../runtime" }
libp2prs-core = { path = "../../core" }
libp2prs-traits = { path = "../../traits" }
libp2prs-swarm = { path = "../../swarm" }
bytes = "1.0"
byteorder = "1.3.4"
fnv = "1.0.7"
rand = "0.7.3"
asynchronous-codec = "0.6"
wasm-timer = "0.2.4"
unsigned-varint = { version = "0.7.0", features = ["asynchronous_codec"] }
log = "0.4.11"
sha2 = "0.9.1"
base64 = "0.13.0"
smallvec = "1.6.1"
prost = "0.7"
hex_fmt = "0.3.0"
regex = "1.4.0"
nohash-hasher = "0.2"

[dev-dependencies]
env_logger = "0.8.1"
libp2prs-mplex = { path = "../mplex" }
libp2prs-yamux = { path = "../yamux" }
libp2prs-secio = { path = "../secio" }
libp2prs-noise = { path = "../noise" }
libp2prs-plaintext = { path = "../plaintext" }
libp2prs-tcp = { path = "../../transports/tcp", version = "0.3.0", features = ["async-std"] }
quickcheck = "0.9.2"
hex = "0.4.2"
derive_builder = "0.10.0"
lazy_static = "~1.4"

[build-dependencies]
prost-build = "0.7"

